# free2move_technical_test

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml
answer/: answer2.csv  answer3.csv
data/: sellers.csv
drawio/: tables.drawio
error_data/: error_customers.csv  error_items.csv  error_orders.csv  error_products.csv
free2move-py/: LICENSE  MANIFEST.in  setup.cfg
free2move-py/src/free2move/: __main__.py  create_table.py  entrypoints.py  insert_data.py  statistics.py  utils.py
free2move-py/test/: test_entrypoints.py
