[metadata]
name = free2move
version = attr: %(name)s.__version__
description = free2move technical test: analyze e-commerce data
long_description = file: README.md
author = Romain Thierry-Laumont
licence = MIT
license_files = LICENCE.txt

[options]
include_package_data = true
packages = find:
package_dir=
    =src
install_requires =
  pandas
  psycopg2-binary
  tqdm

[options.entry_points]
console_scripts =
  free2move = free2move.__main__:main

[options.packages.find]
where=src
exclude =
  test
  *.egg-info
  *.pyc

[tox:tox]
envlist = py39

[testenv]
deps =
  pytest
  pytest-cov
commands =
  {envpython} -m pytest -v --cov-report html --cov={[metadata]name} test

[tool:pytest]
testpaths = test
